<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_team"
        android:icon="@drawable/ic_nav_menu_teams"
        android:title="@string/ic_nav_menu_teams"/>
    <item
        android:id="@+id/ic_inbox"
        android:icon="@drawable/ic_nav_menu_inbox"
        android:title="@string/ic_nav_menu_inbox"/>
    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_nav_menu_home"
        android:title="@string/ic_nav_menu_home"/>
    <item
        android:id="@+id/ic_profile"
        android:icon="@drawable/ic_nav_menu_profile"
        android:title="@string/ic_nav_menu_profile"/>
    <item
        android:id="@+id/ic_comakerships"
        android:icon="@drawable/ic_nav_menu_comakerships"
        android:title="@string/ic_nav_menu_comakerships"/>
</menu>