<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="@drawable/ic_toolbar_background"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_activity_title"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="18dp" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="197dp"
        android:layout_height="157dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/companyTXT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@mipmap/ic_logo_round" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_login_input"
        android:drawableStart="@drawable/custom_login_email_icon_focus_state"
        android:drawableLeft="@drawable/custom_login_email_icon_focus_state"
        android:drawablePadding="12dp"
        android:textCursorDrawable="@drawable/custom_textinputet_text_highlight"
        android:ems="10"
        android:hint="@string/login_emailaddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:background="@drawable/custom_login_input"
        android:drawableStart="@drawable/custom_login_password_icon_focus_state"
        android:drawableLeft="@drawable/custom_login_password_icon_focus_state"
        android:drawablePadding="12dp"
        android:textCursorDrawable="@drawable/custom_textinputet_text_highlight"
        android:ems="10"
        android:hint="@string/login_password"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:password="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_login_signin_btn"
        android:ems="22"
        android:enabled="true"
        android:text="@string/login_activity_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/registerQuestionTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_question" />

        <TextView
            android:id="@+id/registerAnswerTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/register_answer"
            android:textColor="@color/primary_green"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>