<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.company.RegisterCompanyActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:background="@drawable/ic_toolbar_background"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/toolbar_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_arrow_back"
                android:clickable="true"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_student_activity_title"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="18dp" />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:boxStrokeColor="@color/primary_green"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconTint="@color/primary_green"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_login_input"
                android:drawablePadding="12dp"
                android:textCursorDrawable="@drawable/custom_textinputet_text_highlight"
                android:maxLines="1"
                android:ems="10"
                android:hint="@string/register_company_full_name"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/spinner_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="20dp"
            android:text="@string/register_student_programs"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_name" />

        <Spinner
            android:id="@+id/programs_dropdown"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinner_message"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:boxStrokeColor="@color/primary_green"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconTint="@color/primary_green"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/programs_dropdown" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_login_input"
                android:drawablePadding="12dp"
                android:textCursorDrawable="@drawable/custom_textinputet_text_highlight"
                android:maxLines="1"
                android:ems="10"
                android:hint="@string/register_company_user_email"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:boxStrokeColor="@color/primary_green"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconTint="@color/primary_green"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nickname_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_login_input"
                android:drawablePadding="12dp"
                android:textCursorDrawable="@drawable/custom_textinputet_text_highlight"
                android:maxLines="1"
                android:ems="10"
                android:hint="@string/register_student_nickname"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:boxStrokeColor="@color/primary_green"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconTint="@color/primary_green"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_nickname">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_login_input"
                android:drawablePadding="12dp"
                android:textCursorDrawable="@drawable/custom_textinputet_text_highlight"
                android:ems="10"
                android:maxLines="1"
                android:hint="@string/login_password"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:password="true"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:boxStrokeColor="@color/primary_green"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconTint="@color/primary_green"
            app:errorEnabled="true"
            app:hintTextColor="@color/primary_green"            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password_et"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_login_input"
                android:drawablePadding="12dp"
                android:textCursorDrawable="@drawable/custom_textinputet_text_highlight"
                android:ems="10"
                android:maxLines="1"
                android:hint="@string/register_company_user_password"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:password="true"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordET" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_login_signin_btn"
            android:ems="22"
            android:enabled="true"
            android:text="@string/register_company_create_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_repeatPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/create_btn">

            <TextView
                android:id="@+id/signinQuestionTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_question" />

            <TextView
                android:id="@+id/signinAnswerTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/signin_answer"
                android:textColor="@color/primary_green"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>